zabbix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  labels:
    app: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix
  template:
    metadata:
      labels:
        app: zabbix
    spec:
      containers:
        - name: zabbix
          image: zabbix/zabbix-server-pgsql:alpine-latest
          ports:
            - containerPort: 10051
