zabbix/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
  labels:
    app: zabbix-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-web
  template:
    metadata:
      labels:
        app: zabbix-web
    spec:
      containers:
        - name: zabbix-web
          image: zabbix/zabbix-web-nginx-pgsql:alpine-latest
          ports:
            - containerPort: 8080
