zabbix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: zabbix.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-service
                port:
                  number: 10051
